fix subtext alignment

--- a/client/css/home.css
+++ b/client/css/home.css
@@ -1,3 +1,7 @@
+a {
+  color: white;
+}
+
 *,
 *:after,
 *:before {
@@ -36,6 +40,7 @@
     align-items: center;
 
 }
+
 .single-box > * {
   color: white;
 }
